Its purpose is now served by the 
C<Marpa::R2::Scanless::V::ambiguous()> method.

The C<Marpa::R2::Scanless::R::current_g1_location()> method
has been removed.
Its purpose is now served by the 
C<Marpa::R2::Scanless::V::block_progress()> method.

The C<Marpa::R2::Scanless::R::pause_span()> method
has been removed.
Event location information is now available
as arguments to the
event handlers.

=head2 Marpa::R2::Scanless::R::progress() changed

C<Marpa::R2::Scanless::R::progress()> reported
the dot position of completions as -1.
In Marpa::R3,
C<< $slr->progress() >> reports
the dot position of completions as a non-negative integer,
consistent with other dot positions.
As a reminder, the dot position of a completed production is always
the same as its RHS length.

=head2 The per-parse constructor has been elminated

In Marpa::R2, if the semantics package has a C<new()>
method, that method was used as the constructor of
the per-parse object.
In Marpa::R3, there is no per-parse constructor.

=head2 The per-parse argument never affects the semantics package

As of Marpa::R3, the per-parse argument has no effect on
the semantics package.
In Marpa::R2, if the c<semantics_package> named argument was
not used and the per-parse argument was blessed,
then the package into which the per-parse argument was blessed
became the semantics package.

=head2 The semantic closure now always receives exactly 2 arguments

Under Marpa::R2, the semantic closure received a varying number
of arguments, depending on circumstances.
Under Marpa::R3, the semantic closure always receives exactly 
2 arguments.
The first argument is the per-parse object.
The second argument is a reference to an array containing
the values of the child nodes, in lexical order.
If there were no child nodes visible to the semantics,
then the second argument is an empty array.

=head1 COPYRIGHT AND LICENSE

=for Marpa::R3::Display
ignore: 1

  Marpa::R3 is Copyright (C) 2017, Jeffrey Kegler.
