@@ -236,6 +236,18 @@ Event location information is now available
 as arguments to the
 event handlers.
 
+=head2 Marpa::R2::Scanless::R::line_column() changed
+
+The interface to
+C<Marpa::R2::Scanless::R::line_column()> has changed
+to allow multi-block input.
+
+=head2 Marpa::R2::Scanless::R::literal() changed
+
+The interface to
+C<Marpa::R2::Scanless::R::literal()> has changed
+to allow multi-block input.
+
 =head2 Marpa::R2::Scanless::R::progress() changed
 
 C<Marpa::R2::Scanless::R::progress()> reported
